lint not check, for now

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "test:ci": "./bin/test-backend-ci",
     "test:all": "yarn test:ci && yarn --cwd frontend test:ci",
     "test:e2e:ui": "npx playwright test --ui tests/e2e",
-    "lint": "biome check src",
+    "lint": "biome lint src",
     "lint:fix": "biome check --write src",
     "lint:fix:single": "biome check --write --no-errors-on-unmatched",
     "lint:fix:all": "yarn lint:fix && yarn --cwd frontend lint:fix",
-    "lint:ci": "mkdir -p reports; biome check src --reporter summary; LINT_EXIT=$?; biome check src --reporter junit > reports/lint.xml; JUNIT_EXIT=$?; [ $LINT_EXIT -eq 0 ] && [ $JUNIT_EXIT -eq 0 ]",
+    "lint:ci": "mkdir -p reports; biome lint src --reporter summary; LINT_EXIT=$?; biome lint src --reporter junit > reports/lint.xml; JUNIT_EXIT=$?; [ $LINT_EXIT -eq 0 ] && [ $JUNIT_EXIT -eq 0 ]",
     "lint:ci:all": "yarn lint:ci && yarn --cwd frontend lint:ci",
     "clean": "rm -rf coverage reports frontend/coverage frontend/reports frontend/build",
     "docs:serve": "npx @redocly/cli preview-docs -p 5003 docs/openapi/index.yaml",
