--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -319,7 +319,7 @@ jobs:
         key: v16-yarn-deps-{{ checksum "combined-yarnlock.txt" }}
     - run:
         name: Ensure reports directory exists
-        command: mkdir reports
+        command: mkdir -p reports frontend/reports
     - run: yarn build
     - run:
         name: Lint backend
