--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Office of Head Start Training & Technical Assistance Data Platform\r =============================================",
   "main": "index.js",
+  "private": true,
   "engines": {
     "node": "22.22.0"
   },
@@ -55,17 +56,18 @@
     "db:seed:prod": "node_modules/.bin/sequelize db:seed:all --options-path .production.sequelizerc",
     "db:seed:undo": "node_modules/.bin/sequelize db:seed:undo:all",
     "db:seed:undo:prod": "node_modules/.bin/sequelize db:seed:undo:all --options-path .production.sequelizerc",
+    "db:validate:filenames": "node ./src/tools/validateDbFilenames.js",
     "docker:clear": "docker images | grep head-start | awk '{print $3}' | while read x; do docker image rm -f $x; done",
     "docker:deps": "docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm backend yarn install && docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm frontend yarn install && docker compose --profile minimal_required_postgres --profile minimal_required_redis run --rm worker yarn install",
-    "docker:reset": "./bin/reset-all",
-    "docker:start": "docker compose --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up --build",
+    "docker:reset": "make docker-reset",
+    "docker:start": "make docker-start",
     "docker:start:native": "docker compose --profile full_stack --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up & sleep 1 && docker compose -f docker-compose.yml stop db",
-    "docker:start:full": "docker compose --profile full_stack --profile full_stack_zap  --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python up",
+    "docker:start:full": "make docker-start-full",
     "docker:start:debug": "docker compose --compatibility -f docker-compose.yml -f docker-compose.debug.yml up",
-    "docker:stop": "docker compose --profile full_stack --profile full_stack_zap --profile minimal_required_node --profile minimal_required_postgres --profile minimal_required_redis --profile minimal_required_python down",
+    "docker:stop": "make docker-stop",
     "docker:dbs:start": "docker compose -f 'docker-compose.yml' --profile full_stack --profile minimal_required_redis --profile minimal_required_python up",
     "docker:dbs:stop": "yarn docker:stop",
-    "docker:test": "./bin/run-tests",
+    "docker:test": "make docker-test",
     "docker:test:be": "yarn docker:yarn:be test",
     "docker:lint": "yarn docker:yarn:be lint:ci && yarn docker:yarn:fe lint:ci",
     "docker:lint:fix": "yarn docker:yarn:be lint:fix && yarn docker:yarn:fe lint:fix",
