--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,30 @@
-.dockerignore
+# VCS and editor metadata
+.git
+.github
+.circleci
+.vscode
+.idea
+
+# Dependencies and build outputs
 node_modules
-docker-compose.yaml
+frontend/node_modules
+packages/*/node_modules
+build
+frontend/build
+coverage
+frontend/coverage
+reports
+frontend/reports
+playwright-report
+test-results
+
+# Runtime/temp files
+tmp
+.tmp
+*.log
+*.pid
+
+# Local env and caches
+.env
+.cache
+.nyc_output
