--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -511,17 +511,52 @@ jobs:
     - attach_workspace:
         at: .
     - run:
-        name: Start up local services
-        command: ./bin/prod-style-server
+        name: Build and start scan target
+        command: |
+          set -euxo pipefail
+          mkdir -p reports/server
+          rm -f reports/server/*
+          docker compose -f docker-compose.dss.yml run --rm server yarn install --production=false
+          docker compose -f docker-compose.dss.yml run --rm server yarn --cwd frontend install --production=false
+          docker compose -f docker-compose.dss.yml run --rm server yarn build
+          docker compose -f docker-compose.dss.yml run --rm server yarn --cwd frontend run build
+          docker compose -f docker-compose.dss.yml run --rm server yarn db:migrate:ci
+          docker compose -f docker-compose.dss.yml up -d
     - run:
         name: Wait for Node.js server to start
-        command: ./bin/ping-server 8080
+        command: ./bin/ping-server 8080 localhost "" 20
     - run:
         name: Pull OWASP ZAP docker image
         command: docker pull zaproxy/zap-stable:latest
     - run:
-        name: Run OWASP ZAP scan for Node.js server
-        command: ./bin/run-owasp-scan --target http://server:8080 --full
+        name: Run OWASP ZAP full scan
+        command: |
+          set -euxo pipefail
+          docker run \
+            -v "$(pwd)/zap.conf:/zap/wrk/zap.conf:ro" \
+            -v "$(pwd)/reports:/zap/wrk:rw" \
+            --rm \
+            --user zap:$(id -g) \
+            --network=smarthub \
+            --platform linux/amd64 \
+            -t zaproxy/zap-stable:latest zap-full-scan.py \
+            -t http://server:8080 \
+            -c /zap/wrk/zap.conf -I -i \
+            -r "server/owasp_full_scan_report.html" \
+            -J "server/owasp_full_scan_report.json" \
+            -d | tee "reports/server/owasp_full_scan.log"
+          node src/tools/clean-zap-report.js \
+            reports/server/owasp_full_scan_report.html \
+            reports/server/owasp_full_scan_report_cleaned.html
+    - run:
+        name: Capture container logs
+        when: always
+        command: |
+          docker compose -f docker-compose.dss.yml logs --no-color > reports/server/docker-compose.log
+    - run:
+        name: Tear down scan services
+        when: always
+        command: docker compose -f docker-compose.dss.yml down -v
     - store_artifacts:
         path: reports
 
