--- a/package.json
+++ b/package.json
@@ -111,9 +111,7 @@
     "check-coverage": "node ./src/tools/check-coverage.js --fail-on-uncovered=true",
     "createMonitoringGoalsCLI": "node ./build/server/src/tools/createMonitoringGoalsCLI.js",
     "createMonitoringGoalsCLI:local": "tsx ./src/tools/createMonitoringGoalsCLI.js",
-    "cli:dbMaintenance": "node ./build/server/src/tools/dbMaintenanceCLI.js",
-    "cli:queue-exercise:live": "node ./build/server/src/tools/queueExerciseLiveCLI.js",
-    "cli:queue-exercise:local": "tsx ./src/tools/queueExerciseLiveCLI.ts"
+    "cli:dbMaintenance": "node ./build/server/src/tools/dbMaintenanceCLI.js"
   },
   "repository": {
     "type": "git",
@@ -353,7 +351,7 @@
     "aws-sdk-client-mock": "^4.1.0",
     "aws4": "^1.11.0",
     "axios": "^1.13.5",
-    "bull": "^4.16.5",
+    "bull": "^4.2.0",
     "chardet": "^2.0.0",
     "cheerio": "^1.1.2",
     "client-oauth2": "^4.3.3",
