--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,68 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "license": "ISC",
-  "dependencies": {
-    "@babel/runtime": "^7.26.10",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@hookform/error-message": "^0.0.5",
-    "@mesh-kit/core": "^1.0.0",
-    "@react-hook/resize-observer": "^1.2.6",
-    "@silevis/reactgrid": "3.1",
-    "@trussworks/react-uswds": "5.1.0",
-    "@ttahub/common": "2.2.19",
-    "@use-it/interval": "^1.0.0",
-    "async": "^3.2.3",
-    "browserslist": "^4.16.5",
-    "classnames": "^2.5.1",
-    "csv-parse": "^4.14.1",
-    "detect-file-encoding-and-language": "^2.4.0",
-    "dompurify": "^3.3.0",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
-    "ejs": "^3.1.7",
-    "focus-trap-react": "^10.3.0",
-    "follow-redirects": "^1.15.6",
-    "html-react-parser": "^5.1.1",
-    "html-to-draftjs": "^1.5.0",
-    "html2canvas": "^1.4.1",
-    "http-proxy-middleware": "^3.0.5",
-    "lodash": "^4.17.23",
-    "micromatch": "^4.0.8",
-    "minimist": "^1.2.6",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.35",
-    "nth-check": "^2.0.1",
-    "plotly.js": "^2.34.0",
-    "plotly.js-basic-dist": "^2.34.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.0.0",
-    "react": "^17.0.1",
-    "react-admin": "^3.19.12",
-    "react-app-polyfill": "^3.0.0",
-    "react-dom": "^17.0.1",
-    "react-draft-wysiwyg": "^1.14.6",
-    "react-dropzone": "^11.5.1",
-    "react-fontawesome": "^1.7.1",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.0",
-    "react-idle-timer": "^4.4.2",
-    "react-input-autosize": "^3.0.0",
-    "react-plotly.js": "^2.5.1",
-    "react-responsive": "^8.1.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.3.1",
-    "react-router-prop-types": "^1.0.5",
-    "react-select": "^5.7.4",
-    "react-stickynode": "^4.0.0",
-    "react-with-direction": "^1.3.1",
-    "sass": "^1.51.0",
-    "url-join": "^4.0.1",
-    "use-deep-compare-effect": "^1.6.1",
-    "uuid": "^8.3.2"
-  },
   "engines": {
     "node": "22.22.0"
   },
@@ -80,6 +18,85 @@
     "lint:fix:single": "eslint --fix",
     "lint:ci": "eslint -f eslint-formatter-multiple src"
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/error-message": "^0.0.5",
+    "@mesh-kit/core": "^1.0.160",
+    "@react-hook/resize-observer": "^1.2.6",
+    "@silevis/reactgrid": "3.1",
+    "@trussworks/react-uswds": "5.1.0",
+    "@ttahub/common": "2.2.19",
+    "@use-it/interval": "^1.0.0",
+    "@uswds/uswds": "3.1.0",
+    "classnames": "^2.5.1",
+    "csv-parse": "^4.14.1",
+    "detect-file-encoding-and-language": "^2.4.0",
+    "dompurify": "^3.3.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "focus-trap-react": "^10.3.0",
+    "html-react-parser": "^5.1.1",
+    "html-to-draftjs": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^3.0.5",
+    "lodash": "^4.17.23",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.35",
+    "plotly.js": "^2.34.0",
+    "plotly.js-basic-dist": "^2.34.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^7.0.0",
+    "react": "^17.0.1",
+    "react-admin": "^3.19.12",
+    "react-app-polyfill": "^3.0.0",
+    "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.6",
+    "react-dropzone": "^11.5.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.15.0",
+    "react-idle-timer": "^4.4.2",
+    "react-plotly.js": "^2.5.1",
+    "react-responsive": "^8.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
+    "react-router-prop-types": "^1.0.5",
+    "react-select": "^5.7.4",
+    "react-stickynode": "^4.0.0",
+    "url-join": "^4.0.1",
+    "use-deep-compare-effect": "^1.6.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@sheerun/mutationobserver-shim": "^0.3.3",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^13.5.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-formatter-multiple": "^1.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.10.1",
+    "express": "^4.22.0",
+    "fetch-mock": "^9.11.0",
+    "history": "4.10.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-junit": "^13.0.0",
+    "mutationobserver-shim": "^0.3.7",
+    "postcss": "^8.4.39",
+    "react-scripts": "^5.0.1",
+    "react-select-event": "^5.1.0"
+  },
   "resolutions": {
     "ansi-regex": "^5.0.1",
     "async": "^3.2.3",
@@ -89,10 +106,9 @@
     "cross-fetch": "^3.1.5",
     "d3-color": "^3.1.0",
     "decode-uri-component": "^0.2.1",
-    "dompurify": "^2.5.8",
+    "dompurify": "^3.3.1",
     "ejs": "^3.1.10",
     "es5-ext": "^0.10.63",
-    "express": "^4.22.0",
     "follow-redirects": "^1.15.6",
     "glob-parent": "^6.0.2",
     "json5": "^1.0.2",
@@ -101,18 +117,45 @@
     "minimist": "^1.2.6",
     "moment": "^2.29.2",
     "nanoid": "^3.2.0",
+    "typescript": "^5.8.3",
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
     "on-headers": "1.1.0",
     "path-to-regexp": "^1.9.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.33",
     "semver": "^7.5.3",
     "serialize-javascript": "^6.0.2",
+    "sqlite3": "^5.1.7",
     "tar": "^7.5.7",
     "tough-cookie": "^4.0.0",
     "ua-parser-js": "^0.7.33",
     "webpack": "^5.76.1",
     "yaml": "^2.2.2"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/index.js",
+      "<rootDir>/src/setupProxy.js",
+      "<rootDir>/src/pages/NotFound/index.js",
+      "<rootDir>/src/polyfills.js",
+      "<rootDir>/src/pages/Widgets/index.js",
+      "<rootDir>/src/widgets/Example.js",
+      "<rootDir>/src/pages/RegionalDashboard/formatDateRange.js",
+      "<rootDir>/src/pages/RegionalDashboard/constants.js",
+      "<rootDir>/src/pages/makecolors.js",
+      "<rootDir>/src/NetworkContext.js",
+      "<rootDir>/src/hooks/helpers.js",
+      "<rootDir>/src/testHelpers.js",
+      "<rootDir>/src/pages/activityReports/testHelpers.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 90,
+        "functions": 90,
+        "branches": 90,
+        "lines": 90
+      }
+    }
   },
   "eslintConfig": {
     "root": true,
@@ -179,60 +222,5 @@
       "not dead",
       "not op_mini all"
     ]
-  },
-  "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@testing-library/dom": "^8.11.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^13.5.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-formatter-multiple": "^1.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.1.5",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-testing-library": "^3.10.1",
-    "fetch-mock": "^9.11.0",
-    "history": "4.10.1",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^13.0.0",
-    "mutationobserver-shim": "^0.3.7",
-    "postcss": "^8.4.39",
-    "react-scripts": "^5.0.1",
-    "react-select-event": "^5.1.0"
-  },
-  "peerDependencies": {
-    "postcss": "^8.4.33"
-  },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/src/index.js",
-      "<rootDir>/src/setupProxy.js",
-      "<rootDir>/src/pages/NotFound/index.js",
-      "<rootDir>/src/polyfills.js",
-      "<rootDir>/src/pages/Widgets/index.js",
-      "<rootDir>/src/widgets/Example.js",
-      "<rootDir>/src/pages/RegionalDashboard/formatDateRange.js",
-      "<rootDir>/src/pages/RegionalDashboard/constants.js",
-      "<rootDir>/src/pages/makecolors.js",
-      "<rootDir>/src/NetworkContext.js",
-      "<rootDir>/src/hooks/helpers.js",
-      "<rootDir>/src/testHelpers.js",
-      "<rootDir>/src/pages/activityReports/testHelpers.js"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "statements": 90,
-        "functions": 90,
-        "branches": 90,
-        "lines": 90
-      }
-    }
   }
 }
