--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lint:ci": "eslint -f eslint-formatter-multiple src"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -29,21 +30,27 @@
     "@trussworks/react-uswds": "5.1.0",
     "@ttahub/common": "2.2.19",
     "@use-it/interval": "^1.0.0",
-    "@uswds/uswds": "3.1.0",
+    "async": "^3.2.3",
+    "browserslist": "^4.16.5",
     "classnames": "^2.5.1",
     "csv-parse": "^4.14.1",
     "detect-file-encoding-and-language": "^2.4.0",
-    "dompurify": "^3.3.0",
+    "dompurify": "^3.3.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "ejs": "^3.1.7",
     "focus-trap-react": "^10.3.0",
+    "follow-redirects": "^1.15.6",
     "html-react-parser": "^5.1.1",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
     "lodash": "^4.17.23",
+    "micromatch": "^4.0.8",
+    "minimist": "^1.2.6",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.35",
+    "nth-check": "^2.0.1",
     "plotly.js": "^2.34.0",
     "plotly.js-basic-dist": "^2.34.0",
     "prop-types": "^15.7.2",
@@ -54,9 +61,11 @@
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.6",
     "react-dropzone": "^11.5.1",
+    "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.0",
     "react-idle-timer": "^4.4.2",
+    "react-input-autosize": "^3.0.0",
     "react-plotly.js": "^2.5.1",
     "react-responsive": "^8.1.1",
     "react-router": "^5.2.0",
@@ -65,10 +74,46 @@
     "react-router-prop-types": "^1.0.5",
     "react-select": "^5.7.4",
     "react-stickynode": "^4.0.0",
-    "sass ": "^1.51.0",
+    "react-with-direction": "^1.3.1",
+    "sass": "^1.51.0",
     "url-join": "^4.0.1",
     "use-deep-compare-effect": "^1.6.1",
     "uuid": "^8.3.2"
+  },
+  "resolutions": {
+    "ansi-regex": "^5.0.1",
+    "async": "^3.2.3",
+    "braces": "^3.0.3",
+    "browserslist": "^4.16.5",
+    "cookie": "^0.7.2",
+    "cross-fetch": "^3.1.5",
+    "d3-color": "^3.1.0",
+    "decode-uri-component": "^0.2.1",
+    "dompurify": "^3.3.1",
+    "ejs": "^3.1.10",
+    "es5-ext": "^0.10.63",
+    "express": "^4.22.0",
+    "follow-redirects": "^1.15.6",
+    "glob-parent": "^6.0.2",
+    "json5": "^1.0.2",
+    "lodash": "^4.17.23",
+    "minimatch": "^3.0.5",
+    "minimist": "^1.2.6",
+    "moment": "^2.29.2",
+    "nanoid": "^3.2.0",
+    "node-fetch": "^2.6.7",
+    "nth-check": "^2.0.1",
+    "on-headers": "1.1.0",
+    "path-to-regexp": "^1.9.0",
+    "postcss": "^8.4.33",
+    "semver": "^7.5.3",
+    "serialize-javascript": "^6.0.2",
+    "sqlite3": "^5.1.7",
+    "tar": "^7.5.7",
+    "tough-cookie": "^4.0.0",
+    "ua-parser-js": "^0.7.33",
+    "webpack": "^5.76.1",
+    "yaml": "^2.2.2"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
@@ -88,7 +133,6 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.10.1",
-    "express": "^4.22.0",
     "fetch-mock": "^9.11.0",
     "history": "4.10.1",
     "jest-fetch-mock": "^3.0.3",
@@ -97,41 +141,6 @@
     "postcss": "^8.4.39",
     "react-scripts": "^5.0.1",
     "react-select-event": "^5.1.0"
-  },
-  "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "async": "^3.2.3",
-    "braces": "^3.0.3",
-    "browserslist": "^4.16.5",
-    "cookie": "^0.7.2",
-    "cross-fetch": "^3.1.5",
-    "d3-color": "^3.1.0",
-    "decode-uri-component": "^0.2.1",
-    "dompurify": "^3.3.1",
-    "ejs": "^3.1.10",
-    "es5-ext": "^0.10.63",
-    "follow-redirects": "^1.15.6",
-    "glob-parent": "^6.0.2",
-    "json5": "^1.0.2",
-    "lodash": "^4.17.23",
-    "minimatch": "^3.0.5",
-    "minimist": "^1.2.6",
-    "moment": "^2.29.2",
-    "nanoid": "^3.2.0",
-    "typescript": "^5.8.3",
-    "node-fetch": "^2.6.7",
-    "nth-check": "^2.0.1",
-    "on-headers": "1.1.0",
-    "path-to-regexp": "^1.9.0",
-    "postcss": "^8.4.33",
-    "semver": "^7.5.3",
-    "serialize-javascript": "^6.0.2",
-    "sqlite3": "^5.1.7",
-    "tar": "^7.5.7",
-    "tough-cookie": "^4.0.0",
-    "ua-parser-js": "^0.7.33",
-    "webpack": "^5.76.1",
-    "yaml": "^2.2.2"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
