--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "js-yaml": "^4.1.1",
     "lodash": "^4.17.23",
     "marked": "^4.0.10",
+    "minimatch": "^10.2.1",
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
     "nanoid": "^3.2.0",
